# video-processing-pipeline

./: .gitignore  main.py  pyproject.toml
lancedb/frames.lance/_transactions/: 0-8da38481-5ad4-4f68-8ab9-df71785a8754.txn
lancedb/frames.lance/_versions/: 1.manifest
src/: worker.py
src/activities/: extract_frames.py  process_frames.py  store_results.py
src/database/: clickhouse.py  lancedb.py
src/utils/: failures.py
src/workflows/: workflow.py
